# Weather-Android

./: .gitignore  DEVELOPMENT.md  android_main.py  api_key_guide.md  buildozer.spec  development_spec.md  main.py  main_old.py  pc_main.py  pc_main_v2.py  pyproject.toml  run_weather_pc.bat  run_weather_v2.bat
.github/workflows/: build.yml
