[project]
name = "weather-insight-hub"
version = "0.1.0"
description = "실시간 날씨 및 생활 환경 정보 대시보드"
dependencies = [
    "flet",
    "flet-geolocator",
    "httpx",
    "python-dotenv",
]

[tool.flet]
product = "Weather Insight Hub"
org = "org.insight"
module-name = "android_main"

[tool.flet.android]
# 안드로이드 빌드 설정
adaptive_icon_background = "#000000"

[tool.flet.android.permission]
# 위치 및 네트워크 권한
"android.permission.INTERNET" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.ACCESS_COARSE_LOCATION" = true

[tool.flet.android.manifest_application]
# HTTP 평문 통신 허용 (공공데이터포털 API가 http 사용)
usesCleartextTraffic = true
